# velpos

./: .gitignore  AGENTS.md
backend/: main.py  pyproject.toml
backend/application/: git_helpers.py
backend/application/agent/: agent_application_service.py
backend/application/channel_profile/: channel_profile_application_service.py
backend/application/command/: command_application_service.py
backend/application/evolution/: evolution_application_service.py
backend/application/git/: git_application_service.py
backend/application/im_binding/: im_application_service.py  im_channel_application_service.py
backend/application/memory/: claude_md_revision_application_service.py  memory_file_application_service.py  rule_file_application_service.py
backend/application/project/: plugin_init_application_service.py  project_application_service.py  workspace_application_service.py
backend/application/session/: session_application_service.py  session_branch_application_service.py  session_observability_recorder.py  session_query_engine.py  session_run_timeline_service.py  session_stream_consumer.py  session_timeline_event_service.py
backend/application/team_task/: prompt_builder.py  team_coordinator_service.py  team_hooks.py  trace_file_manager.py
backend/application/terminal/: terminal_application_service.py
backend/domain/shared/: async_utils.py  utils.py
backend/infr/agent/: catalog.py
backend/infr/client/: claude_agent_gateway.py  claude_command_gateway.py  (+9 more)
backend/ohs/: dependencies.py  im_message_handler_impl.py  session_event_coordinator.py
(+446 files in other folders)
