[project]
name = "velpos-backend"
version = "0.2.0"
description = "Web interface backend for controlling Claude Code via Agent SDK"
requires-python = ">=3.11,<3.13"
dependencies = [
    "claude-agent-sdk>=0.0.20",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.1.1",
    "websockets>=13.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "lark-oapi>=1.5.0",
    "agent-client-protocol>=0.11.0",
    "pyyaml>=6.0.3",
]
